schedule staff name fix vertical align center

--- a/tailwind.css
+++ b/tailwind.css
@@ -226,6 +226,9 @@
 , .sticky:nth-child(2) .theadEl div:first-child
 , #tbodyEl .grid div:first-child {
   position: sticky;
-  left: 0;
+  left: -1px;
   z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
